--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,21 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
+  - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: daily
-      time: "19:30"
+      time: "19:45"
+      timezone: "Europe/Berlin"
+  - package-ecosystem: "composer" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: daily
+      time: "19:45"
+      timezone: "Europe/Berlin"
+  - package-ecosystem: "gradle" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: daily
+      time: "19:45"
       timezone: "Europe/Berlin"
