--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,3 +23,9 @@ updates:
       interval: daily
       time: "19:45"
       timezone: "Europe/Berlin"
+  - package-ecosystem: "docker" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: daily
+      time: "19:45"
+      timezone: "Europe/Berlin"
