--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -22,15 +22,13 @@ jobs:
           distribution: "temurin"
 
       - uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: clean
-
-      - uses: gradle/actions/setup-gradle@v3
         env:
           DOCKER_ENABLE_SECURITY: false
         with:
           gradle-version: 7.6
-          arguments: build
+
+      - name: Run Gradle Command
+        run: ./gradlew clean build
 
       - name: Set up Docker Buildx
         id: buildx
