--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -74,18 +74,6 @@ jobs:
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
             type=raw,value=alpha,enable=${{ github.ref == 'refs/heads/main' }}
 
-      - name: Inspect latest
-        run: |
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest
-
-      - name: Inspect alpha
-        run: |
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:alpha
-
-      - name: Inspect ${{ steps.versionNumber.outputs.versionNumber }}
-        run: |
-          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:${{ steps.versionNumber.outputs.versionNumber }}
-
       - name: Build and push main Dockerfile
         uses: docker/build-push-action@v5
         with:
@@ -126,31 +114,39 @@ jobs:
           build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
 
-      - name: Generate tags lite
-        id: meta3
-        uses: docker/metadata-action@v5
-        # if: github.ref != 'refs/heads/main'
-        with:
-          images: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-            ghcr.io/${{ steps.repoowner.outputs.lowercase }}/s-pdf
-          tags: |
-            type=raw,value=${{ steps.versionNumber.outputs.versionNumber }}-lite,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=latest-lite,enable=${{ github.ref == 'refs/heads/main' }}
+      - name: Inspect latest
+        run: |
+          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:latest-ultra-lite
 
-      - name: Build and push Dockerfile-lite
-        uses: docker/build-push-action@v5
-        # if: github.ref != 'refs/heads/main'
-        with:
-          context: .
-          file: ./Dockerfile-lite
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: ${{ steps.meta3.outputs.tags }}
-          labels: ${{ steps.meta3.outputs.labels }}
-          build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
-          platforms: linux/amd64,linux/arm64/v8
+      - name: Inspect ${{ steps.versionNumber.outputs.versionNumber }}-ultra-lite
+        run: |
+          docker image inspect ${{ steps.repoowner.outputs.lowercase }}/s-pdf:${{ steps.versionNumber.outputs.versionNumber }}-ultra-lite
+
+      # - name: Generate tags lite
+      #   id: meta3
+      #   uses: docker/metadata-action@v5
+      #   # if: github.ref != 'refs/heads/main'
+      #   with:
+      #     images: |
+      #       ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #       ghcr.io/${{ steps.repoowner.outputs.lowercase }}/s-pdf
+      #     tags: |
+      #       type=raw,value=${{ steps.versionNumber.outputs.versionNumber }}-lite,enable=${{ github.ref == 'refs/heads/main' }}
+      #       type=raw,value=latest-lite,enable=${{ github.ref == 'refs/heads/main' }}
+
+      # - name: Build and push Dockerfile-lite
+      #   uses: docker/build-push-action@v5
+      #   # if: github.ref != 'refs/heads/main'
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile-lite
+      #     push: true
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
+      #     tags: ${{ steps.meta3.outputs.tags }}
+      #     labels: ${{ steps.meta3.outputs.labels }}
+      #     build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
+      #     platforms: linux/amd64,linux/arm64/v8
 
       # - name: Delete untagged Package Versions
       #   uses: actions/delete-package-versions@v5
