--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -27,10 +27,14 @@ jobs:
           java-version: "17"
           distribution: "temurin"
 
-      - name: Generate jar (With Security=${{ matrix.enable_security }})
-        run: ./gradlew clean createExe
+      - uses: gradle/actions/setup-gradle@v3
         env:
           DOCKER_ENABLE_SECURITY: ${{ matrix.enable_security }}
+        with:
+          gradle-version: 7.6
+
+      - name: Generate jar (With Security=${{ matrix.enable_security }})
+        run: ./gradlew clean createExe
 
       - name: Rename binarie
         if: matrix.file_suffix != ''
@@ -40,6 +44,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
+          name: Stirling-PDF${{ matrix.file_suffix }}.exe
           overwrite: true
           retention-days: 1
           if-no-files-found: error
