--- a/Dockerfile-ultra-lite
+++ b/Dockerfile-ultra-lite
@@ -16,6 +16,8 @@ ENV DOCKER_ENABLE_SECURITY=false \
 COPY scripts/download-security-jar.sh /scripts/download-security-jar.sh
 COPY scripts/init-without-ocr.sh /scripts/init-without-ocr.sh
 COPY pipeline /pipeline
+COPY src/main/resources/static/fonts/*.ttf /usr/share/fonts/opentype/noto
+COPY src/main/resources/static/fonts/*.otf /usr/share/fonts/opentype/noto
 COPY build/libs/*.jar app.jar
 
 
