--- a/Dockerfile-ultra-lite
+++ b/Dockerfile-ultra-lite
@@ -12,6 +12,8 @@ ENV DOCKER_ENABLE_SECURITY=false \
     PGID=1000 \
     UMASK=022
 
+RUN mkdir -p /usr/share/fonts/opentype/noto
+
 # Copy necessary files
 COPY scripts/download-security-jar.sh /scripts/download-security-jar.sh
 COPY scripts/init-without-ocr.sh /scripts/init-without-ocr.sh
