--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -149,9 +149,9 @@ jobs:
       #     build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
       #     platforms: linux/amd64,linux/arm64/v8
 
-      # - name: Delete untagged Package Versions
-      #   uses: actions/delete-package-versions@v5
-      #   with: 
-      #     package-name: 's-pdf'
-      #     package-type: 'container'
-      #     delete-only-untagged-versions: 'true'
+      - name: Delete untagged Package Versions
+        uses: actions/delete-package-versions@v5
+        with: 
+          package-name: 's-pdf'
+          package-type: 'container'
+          delete-only-untagged-versions: 'true'
