--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -28,7 +28,7 @@ jobs:
           gradle-version: 7.6
 
       - name: Run Gradle Command
-        run: ./gradlew clean build
+        run: ./gradlew clean build --scan
 
       - name: Set up Docker Buildx
         id: buildx
