--- a/build.gradle
+++ b/build.gradle
@@ -84,9 +84,9 @@ spotless {
 
 dependencies {
     //security updates
-    implementation 'ch.qos.logback:logback-classic:1.5.3'
-    implementation 'ch.qos.logback:logback-core:1.5.3'
-    implementation 'org.springframework:spring-webmvc:6.1.5'
+    implementation 'ch.qos.logback:logback-classic:1.5.5'
+    implementation 'ch.qos.logback:logback-core:1.5.5'
+    implementation 'org.springframework:spring-webmvc:6.1.6'
 
     implementation("io.github.pixee:java-security-toolkit:1.1.3")
 
@@ -145,15 +145,15 @@ dependencies {
     }
 
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
-    implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
+    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78'
     implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.4'
-    implementation 'io.micrometer:micrometer-core:1.12.4'
+    implementation 'io.micrometer:micrometer-core:1.12.5'
     implementation group: 'com.google.zxing', name: 'core', version: '3.5.3'
     // https://mvnrepository.com/artifact/org.commonmark/commonmark
     implementation 'org.commonmark:commonmark:0.22.0'
     implementation 'org.commonmark:commonmark-ext-gfm-tables:0.22.0'
     // https://mvnrepository.com/artifact/com.github.vladimir-bukhtoyarov/bucket4j-core
-    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
+    implementation 'com.bucket4j:bucket4j-core:8.10.1'
 
 	implementation 'com.fathzer:javaluator:3.0.3'
 
