--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,13 @@ plugins {
 }
 
 import com.github.jk1.license.render.*
+import java.text.SimpleDateFormat
+
+def dateFormat = new SimpleDateFormat("yyyyMMddHHmmss")
+def timestamp = dateFormat.format(new Date())
 
 group = 'stirling.software'
-version = '0.22.13'
+version = "0.22.8-${timestamp}"
 sourceCompatibility = '17'
 
 repositories {
