--- a/build.gradle
+++ b/build.gradle
@@ -47,25 +47,25 @@ openApi {
 }
 
 launch4j {
-  icon = "${projectDir}/src/main/resources/static/favicon.ico"
+    icon = "${projectDir}/src/main/resources/static/favicon.ico"
 
-  outfile="Stirling-PDF.exe"
-  headerType="console"
-  jarTask = tasks.bootJar
+    outfile="Stirling-PDF-${project.version}.exe"
+    headerType="console"
+    jarTask = tasks.bootJar
 
-  errTitle="Encountered error, Do you have Java 17?"
-  downloadUrl="https://download.oracle.com/java/17/latest/jdk-17_windows-x64_bin.exe"
-  variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
-  jreMinVersion="17"
+    errTitle="Encountered error, Do you have Java 17?"
+    downloadUrl="https://download.oracle.com/java/17/latest/jdk-17_windows-x64_bin.exe"
+    variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
+    jreMinVersion="17"
 
-  mutexName="Stirling-PDF"
-  windowTitle="Stirling-PDF"
+    mutexName="Stirling-PDF"
+    windowTitle="Stirling-PDF"
 
-  messagesStartupError="An error occurred while starting Stirling-PDF"
-  //messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
-  messagesJreVersionError="You are running the wrong version of Java, Please download Java 17."
-  messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 17."
-  messagesInstanceAlreadyExists="Stirling-PDF is already running."
+    messagesStartupError="An error occurred while starting Stirling-PDF"
+    //messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
+    messagesJreVersionError="You are running the wrong version of Java, Please download Java 17."
+    messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 17."
+    messagesInstanceAlreadyExists="Stirling-PDF is already running."
 }
 
 spotless {
