--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ openApi {
 launch4j {
     icon = "${projectDir}/src/main/resources/static/favicon.ico"
 
-    outfile="Stirling-PDF.exe"
+    outfile="Stirling-PDF-${project.version}.exe"
     headerType="console"
     jarTask = tasks.bootJar
 
