--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -41,8 +41,7 @@ jobs:
         run: echo "versionNumber=$(./gradlew printVersion --quiet | tail -1)" >> $GITHUB_OUTPUT
 
       - name: Rename binarie
-        if: matrix.file_suffix != ''
-        run: cp ./build/launch4j/Stirling-PDF.exe ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
+        run: cp ./build/launch4j/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.exe ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
 
       - name: Upload Assets binarie
         uses: actions/upload-artifact@v4
