--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Install Docker Compose
         run: |
           sudo curl -SL "https://github.com/docker/compose/releases/download/v2.26.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+          # sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Run Docker Compose Tests
         run: |
-          chmod +x ./test.sh
+          # chmod +x ./test.sh
           ./test.sh
