--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.4'
-    id 'io.spring.dependency-management' version '1.1.3'
+    id 'io.spring.dependency-management' version '1.1.4'
     id 'org.springdoc.openapi-gradle-plugin' version '1.8.0'
     id "io.swagger.swaggerhub" version "1.3.2"
     id 'edu.sc.seis.launch4j' version '3.0.5'
     id 'com.diffplug.spotless' version '6.25.0'
-    id 'com.github.jk1.dependency-license-report' version '2.6'
+    id 'com.github.jk1.dependency-license-report' version '2.7'
 }
 
 import com.github.jk1.license.render.*
@@ -26,6 +26,7 @@ licenseReport {
 sourceSets {
     main {
         java {
+            // if (System.getProperty('DOCKER_ENABLE_SECURITY') == 'false') {
             if (System.getenv('DOCKER_ENABLE_SECURITY') == 'false') {
                 exclude 'stirling/software/SPDF/config/security/**'
                 exclude 'stirling/software/SPDF/controller/api/UserController.java'
@@ -84,7 +85,7 @@ spotless {
 
 dependencies {
     //security updates
-    implementation 'ch.qos.logback:logback-classic:1.5.5'
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
     implementation 'ch.qos.logback:logback-core:1.5.6'
     implementation 'org.springframework:spring-webmvc:6.1.6'
 
@@ -94,6 +95,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4'
 
+    // if (System.getProperty('DOCKER_ENABLE_SECURITY') != 'false') {
     if (System.getenv('DOCKER_ENABLE_SECURITY') != 'false') {
         implementation 'org.springframework.boot:spring-boot-starter-security:3.2.4'
         implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.1.2.RELEASE'
@@ -144,8 +146,8 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
 
-    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
-    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78'
+    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
+    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
     implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.4'
     implementation 'io.micrometer:micrometer-core:1.12.5'
     implementation group: 'com.google.zxing', name: 'core', version: '3.5.3'
