--- a/.github/workflows/build_and_push_nightly_docker_image.yml
+++ b/.github/workflows/build_and_push_nightly_docker_image.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Upload binaries to release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.sha }}
           files: ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
 
       - name: Rename jar binaries
