--- a/.github/workflows/build_and_push_nightly_docker_image.yml
+++ b/.github/workflows/build_and_push_nightly_docker_image.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ github.token }}
 
       - uses: gradle/actions/setup-gradle@v3
@@ -74,7 +74,7 @@ jobs:
       - name: Upload binaries to release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: ${{ github.actor }}${{ matrix.file_suffix }}${{ steps.versionNumber.outputs.versionNumber }}${{ github.run_id }}
           files: ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
 
       - name: Rename jar binaries
