--- a/.github/workflows/build_and_push_nightly_docker_image.yml
+++ b/.github/workflows/build_and_push_nightly_docker_image.yml
@@ -9,6 +9,8 @@ permissions:
   contents: write
   packages: write
   statuses: write
+  pull-requests: write
+  issues: write
 
 jobs:
   build-and-push:
