--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.4'
+    id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.springdoc.openapi-gradle-plugin' version '1.8.0'
     id "io.swagger.swaggerhub" version "1.3.2"
@@ -12,12 +12,13 @@ plugins {
 import com.github.jk1.license.render.*
 
 group = 'stirling.software'
-version = "0.23.1"
+version = '0.23.2'
 sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
+
 
 licenseReport {
     renderers = [new JsonReportRenderer()]
@@ -48,25 +49,25 @@ openApi {
 }
 
 launch4j {
-    icon = "${projectDir}/src/main/resources/static/favicon.ico"
+  icon = "${projectDir}/src/main/resources/static/favicon.ico"
 
-    outfile="Stirling-PDF.exe"
-    headerType="console"
-    jarTask = tasks.bootJar
+  outfile="Stirling-PDF.exe"
+  headerType="console"
+  jarTask = tasks.bootJar
 
-    errTitle="Encountered error, Do you have Java 17?"
-    downloadUrl="https://download.oracle.com/java/17/latest/jdk-17_windows-x64_bin.exe"
-    variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
-    jreMinVersion="17"
+  errTitle="Encountered error, Do you have Java 17?"
+  downloadUrl="https://download.oracle.com/java/17/latest/jdk-17_windows-x64_bin.exe"
+  variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
+  jreMinVersion="17"
 
-    mutexName="Stirling-PDF"
-    windowTitle="Stirling-PDF"
+  mutexName="Stirling-PDF"
+  windowTitle="Stirling-PDF"
 
-    messagesStartupError="An error occurred while starting Stirling-PDF"
-    //messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
-    messagesJreVersionError="You are running the wrong version of Java, Please download Java 17."
-    messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 17."
-    messagesInstanceAlreadyExists="Stirling-PDF is already running."
+  messagesStartupError="An error occurred while starting Stirling-PDF"
+  //messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
+  messagesJreVersionError="You are running the wrong version of Java, Please download Java 17."
+  messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 17."
+  messagesInstanceAlreadyExists="Stirling-PDF is already running."
 }
 
 spotless {
@@ -92,21 +93,20 @@ dependencies {
     implementation("io.github.pixee:java-security-toolkit:1.1.3")
 
     implementation 'org.yaml:snakeyaml:2.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.5'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.5'
 
-    // if (System.getProperty('DOCKER_ENABLE_SECURITY') != 'false') {
     if (System.getenv('DOCKER_ENABLE_SECURITY') != 'false') {
-        implementation 'org.springframework.boot:spring-boot-starter-security:3.2.4'
+        implementation 'org.springframework.boot:spring-boot-starter-security:3.2.5'
         implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.1.2.RELEASE'
-        implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.2.4"
-        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.4'
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.2.5"
+        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.5'
 
         //2.2.x requires rebuild of DB file.. need migration path
         implementation "com.h2database:h2:2.1.214"
     }
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.4'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.5'
 
     // Batik
     implementation 'org.apache.xmlgraphics:batik-all:1.17'
@@ -149,7 +149,7 @@ dependencies {
 
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.4'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.5'
     implementation 'io.micrometer:micrometer-core:1.12.5'
     implementation group: 'com.google.zxing', name: 'core', version: '3.5.3'
     // https://mvnrepository.com/artifact/org.commonmark/commonmark
@@ -160,7 +160,7 @@ dependencies {
 
 	implementation 'com.fathzer:javaluator:3.0.3'
 
-    developmentOnly("org.springframework.boot:spring-boot-devtools:3.2.4")
+    developmentOnly("org.springframework.boot:spring-boot-devtools:3.2.5")
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
