--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 import com.github.jk1.license.render.*
 
 group = 'stirling.software'
-version = '0.24.0-a'
+version = '0.24.0-b'
 
 // 17 is lowest but we support and recommend 21
 sourceCompatibility = '17'
