--- a/chart/stirling-pdf/Chart.yaml
+++ b/chart/stirling-pdf/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 0.24.0-b
+appVersion: 0.24.0-c
 description: locally hosted web application that allows you to perform various operations
   on PDF files
 home: https://github.com/Ludy87/test_java
