--- a/src/main/resources/settings.yml.template
+++ b/src/main/resources/settings.yml.template
@@ -21,10 +21,10 @@ security:
 #    provider: "google" # Set this to your OAuth provider's name, e.g., 'google' or 'keycloak'
 #    client:
 #      google:
-#        ggClientd: "" # Client ID for Google OAuth2
-#        ggClientsecret: "" # Client Secret for Google OAuth2
-#        ggScope: "https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile" # Scopes for Google OAuth2
-#        ggUseasusername: "email" # Field to use as the username for Google OAuth2
+#        ggclientd: "" # Client ID for Google OAuth2
+#        ggclientsecret: "" # Client Secret for Google OAuth2
+#        ggscope: "https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile" # Scopes for Google OAuth2
+#        gguseasusername: "email" # Field to use as the username for Google OAuth2
 #      github:
 #        ghClientd: "" # Client ID for GitHub OAuth2
 #        ghClientsecret: "" # Client Secret for GitHub OAuth2
