--- a/src/main/resources/settings.yml.template
+++ b/src/main/resources/settings.yml.template
@@ -21,21 +21,21 @@ security:
 #    provider: "google" # Set this to your OAuth provider's name, e.g., 'google' or 'keycloak'
 #    client:
 #      google:
-#        ggclientd: "" # Client ID for Google OAuth2
-#        ggclientsecret: "" # Client Secret for Google OAuth2
-#        ggscope: "https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile" # Scopes for Google OAuth2
-#        gguseasusername: "email" # Field to use as the username for Google OAuth2
+#        clientId: "" # Client ID for Google OAuth2
+#        clientSecret: "" # Client Secret for Google OAuth2
+#        scopes: "https://www.googleapis.com/auth/userinfo.email, https://www.googleapis.com/auth/userinfo.profile" # Scopes for Google OAuth2
+#        useAsUsername: "email" # Field to use as the username for Google OAuth2
 #      github:
-#        ghClientd: "" # Client ID for GitHub OAuth2
-#        ghClientsecret: "" # Client Secret for GitHub OAuth2
-#        ghScope: "read:user" # Scope for GitHub OAuth2
-#        ghUseasusername: "login" # Field to use as the username for GitHub OAuth2
+#        clientId: "" # Client ID for GitHub OAuth2
+#        clientSecret: "" # Client Secret for GitHub OAuth2
+#        scopes: "read:user" # Scope for GitHub OAuth2
+#        useAsUsername: "login" # Field to use as the username for GitHub OAuth2
 #      keycloak:
-#        kcIssuer: "http://192.168.0.123:8888/realms/stirling-pdf" # URL of the Keycloak realm's OpenID Connect Discovery endpoint
-#        kcClientd: "stirling-pdf" # Client ID for Keycloak OAuth2
-#        kcClientsecret: "" # Client Secret for Keycloak OAuth2
-#        kcScope: "openid, profile, email" # Scopes for Keycloak OAuth2
-#        kcUseasusername: "email" # Field to use as the username for Keycloak OAuth2
+#        issuer: "http://192.168.0.123:8888/realms/stirling-pdf" # URL of the Keycloak realm's OpenID Connect Discovery endpoint
+#        clientId: "stirling-pdf" # Client ID for Keycloak OAuth2
+#        clientSecret: "" # Client Secret for Keycloak OAuth2
+#        scopes: "openid, profile, email" # Scopes for Keycloak OAuth2
+#        useAsUsername: "email" # Field to use as the username for Keycloak OAuth2
 
 system:
   defaultLocale: 'en-US' # Set the default language (e.g. 'de-DE', 'fr-FR', etc)
