--- a/build.gradle
+++ b/build.gradle
@@ -161,6 +161,8 @@ dependencies {
 
 	implementation 'com.fathzer:javaluator:3.0.3'
 
+	implementation 'com.itextpdf:itext-core:8.0.4'
+
     developmentOnly("org.springframework.boot:spring-boot-devtools:3.3.0")
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
