--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -29,8 +29,14 @@ body:
       required: true
     attributes:
       label: Version of Stirling-PDF
-      placeholder: 0.0.1
+      placeholder: 0.0.2
       description: What version of Stirling-PDF has the issue?
+  - type: input
+    attributes:
+      label: What was the last working version of Stirling-PDF?
+      placeholder: 0.0.1
+      description: >
+        If known, otherwise leave blank.
   - type: input
     id: contact
     attributes:
