--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -5,85 +5,111 @@ body:
   - type: markdown
     attributes:
       value: |
+        ## Bug Report
+
         Thanks for taking the time to fill out this bug report!
 
-        This issue form is for reporting bugs only!
+        This issue form is for reporting bugs only. Please fill out the following sections to help us understand the issue you are facing.
+  
   - type: textarea
+    id: problem
     validations:
       required: true
     attributes:
       label: The problem
-      description: >-
+      description: >
         Describe the issue you are experiencing here. Tell us what you were trying to do and what happened.
 
         Provide a clear and concise description of what the problem is.
+      placeholder: Provide a detailed description of the issue.
+
   - type: markdown
     attributes:
       value: |
         ## Environment
+
   - type: input
     id: version
     validations:
       required: true
     attributes:
       label: Version of Stirling-PDF
-      placeholder: 0.0.2
+      placeholder: e.g., 0.0.2
       description: What version of Stirling-PDF has the issue?
+
   - type: input
     id: last-working-version
     attributes:
-      label: What was the last working version of Stirling-PDF?
-      placeholder: 0.0.1
+      label: Last working version of Stirling-PDF
+      placeholder: e.g., 0.0.1
       description: >
-        If known, otherwise leave blank.
+        If known, please provide the last version where the issue did not occur. Otherwise, leave blank.
+
   - type: input
     id: url
     attributes:
       label: Page where the problem occurred
-      placeholder: http://localhost:8080/pdf/pipeline
+      placeholder: e.g., http://localhost:8080/pdf/pipeline
       description: >
-        If known, otherwise leave blank.
+        If applicable, provide the URL where the issue occurred. Otherwise, leave blank.
+
+  - type: textarea
+    id: docker
+    attributes:
+      label: Docker configuration
+      description: >
+        Provide your Docker configuration here. Remove any personal details.
+      render: txt
+
   - type: markdown
     attributes:
       value: |
         ## Logs
+
   - type: textarea
     id: logs
     attributes:
-      label: Anything in the logs that might be useful for us?
-      description: For example, error message, or stack traces.
+      label: Relevant log output
+      description: >
+        Provide any log output that might help us diagnose the issue, such as error messages or stack traces.
       render: txt
+
   - type: markdown
     attributes:
       value: |
         ## Additional Information
+
   - type: textarea
     id: additional-info
     attributes:
       label: Additional information
       description: >
-        If you have any additional information for us, use the field below.
+        If you have any additional information that might help us understand and resolve the issue, provide it here.
+
   - type: markdown
     attributes:
       value: |
         ## Browser Information
+
   - type: dropdown
     id: browsers
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: Browsers affected
       description: >
-        If known, otherwise leave blank.
+        If applicable, select the browsers where you are experiencing the issue. Otherwise, leave blank.
       multiple: true
       options:
         - Firefox
         - Chrome
         - Safari
         - Microsoft Edge
+
   - type: checkboxes
     id: terms
     attributes:
       label: No duplicate of the issue
-      description: Please confirm that there are no other issues with the same problem.
+      description: >
+        Please confirm that you have searched for similar issues and none of them match your problem.
       options:
         - label: I have verified that there are no issues related to my problem.
           required: true
